using System.Collections;
using System.Collections.Generic;
using UnityEngine;
namespace ErfanDeveloper
{
    public class Tags
    {
        public static string Run_ANIMATION = "Run";
        public static string JUMP_ANIMATION = "Jump";
        public static string HURT_ANIMATION = "Hurt";
        public static string DIE_ANIMATION = "Die";
    }
}
